--- a/package.json
+++ b/package.json
@@ -25,21 +25,25 @@
   "scripts": {
     "build": "webpack --config webpack.config.js"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "autoprefixer": "^9.7.3",
+    "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-runtime": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^1.0.0",
+    "cssnano": "^4.1.10",
+    "font-awesome": "^4.7.0",
     "element-ui": "^2.9.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.0.2",
-    "font-awesome": "^4.7.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
@@ -53,5 +57,10 @@
     "transform": [
       "vueify"
     ]
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "ie 6-11",
+    "last 2 versions"
+  ]
 }
