1、添加全局初始化参数。 2、添加组件使用时局部参数。 3、对fontAwesome和elementUI图标分开加载。 4、加入自定义图标列表参数。 5、修改控件图标可搜索功能。 6、添加控件选择后可清空。 7、其他优化。

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -25,8 +25,7 @@
   "scripts": {
     "build": "webpack --config webpack.config.js"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
