--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -25,41 +25,27 @@
   "scripts": {
     "build": "webpack --config webpack.config.js"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "autoprefixer": "^9.7.3",
-    "babel-loader": "^8.0.0-beta.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.10",
-    "font-awesome": "^4.7.0",
     "element-ui": "^2.9.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.0.2",
+    "font-awesome": "^4.7.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^3.0.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.3.10"
-  },
-  "browserify": {
-    "transform": [
-      "vueify"
-    ]
-  },
-  "browserslist": [
-    "> 1%",
-    "ie 6-11",
-    "last 2 versions"
-  ]
+  }
 }
