1. 更新 Element UI 版本以及 VUE 等版本。 2. 添加iconfont彩色图标的支持。 3. 添加三组iconfont彩色图标。

--- a/.npmignore
+++ b/.npmignore
@@ -5,6 +5,13 @@ npm-debug.log
 .vscode/
 package-lock.json
 example/
+doc/
+src/
 _book/
 SUMMARY.md
 dist/main.js
+.babelrc
+.bookignore
+book.json
+webpack.config.js
+package.json
