1. 将所需的 Element UI 组件全部打入到项目中，不在需要安装 Element UI 组件。 2. 将 Element UI 和 font-awesome 图标库分离，可按需引用，减少组件库大小。 3. 将iconfont彩色图标分离，减少组件库的基本大小，可按需引用。

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -25,18 +25,20 @@
   "scripts": {
     "build": "webpack --config webpack.config.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "font-awesome": "^4.7.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
+    "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.2",
     "cssnano": "^4.1.10",
     "element-ui": "^2.13.2",
     "file-loader": "^6.0.0",
-    "font-awesome": "^4.7.0",
     "mini-css-extract-plugin": "^0.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-import": "^12.0.1",
