--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -26,7 +26,8 @@
     "build": "webpack --config webpack.config.js"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "svg-sprite-loader": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
@@ -35,6 +36,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^4.2.2",
     "cssnano": "^4.1.10",
     "element-ui": "^2.13.2",
