--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,13 @@
 {
   "presets": [
     [
-      "@babel/preset-env"
+      "@babel/preset-env",
+      {
+        "modules": false
+      }
     ]
+  ],
+  "plugins": [
+    "syntax-dynamic-import"
   ]
 }
