--- a/package.json
+++ b/package.json
@@ -30,25 +30,31 @@
     "svg-sprite-loader": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
-    "autoprefixer": "^9.8.6",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "autoprefixer": "^10.0.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.2.1",
-    "css-loader": "^4.2.2",
+    "css-loader": "^5.0.0",
     "cssnano": "^4.1.10",
     "element-ui": "^2.13.2",
-    "file-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.11.0",
+    "file-loader": "^6.1.1",
+    "mini-css-extract-plugin": "^1.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.1.4",
+    "postcss-import": "^13.0.0",
+    "postcss-loader": "^4.0.4",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
