--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,14 @@
     [
       "@babel/preset-env"
     ]
+  ],
+  "plugins": [
+  [
+    "component",
+    {
+      "libraryName": "element-ui",
+      "styleLibraryName": "theme-chalk"
+    }
   ]
+]
 }
