--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,7 @@
     "@vue/cli-plugin-babel": "^4.5.8",
     "@vue/cli-plugin-eslint": "^4.5.8",
     "@vue/cli-service": "^4.5.8",
+    "svgo-loader": "^2.2.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.12.0",
     "eslint-plugin-vue": "^7.1.0",
