--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://gitee.com/cnovel/e-icon-picker/issues"
   },
-  "homepage": "http://doc.icon.cnovel.club",
+  "homepage": "https://doc.icon.cnovel.club",
   "files": [
     "dist/**",
     "src/**",
@@ -47,7 +47,7 @@
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^5.0.0",
     "cssnano": "^4.1.10",
-    "element-ui": "^2.13.2",
+    "element-ui": "^2.15.1",
     "file-loader": "^6.1.1",
     "mini-css-extract-plugin": "^1.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
