--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "1.0.17",
+  "version": "2.0.0-alpha.1",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -11,7 +11,11 @@
     "icon picker",
     "icon"
   ],
-  "main": "./dist/index.js",
+  "main": "lib/index.cjs.js",
+  "module": "lib/index.esm-bundler.js",
+  "unpkg": "lib/index.global.prod.js",
+  "jsdelivr": "lib/index.global.prod.js",
+  "style": "lib/index.css",
   "repository": {
     "type": "git",
     "url": "https://gitee.com/cnovel/e-icon-picker"
@@ -21,47 +25,66 @@
   "bugs": {
     "url": "https://gitee.com/cnovel/e-icon-picker/issues"
   },
-  "homepage": "http://doc.icon.cnovel.club",
+  "homepage": "https://doc.icon.cnovel.club",
   "files": [
-    "dist/**",
-    "src/**",
-    "types/**",
-    "webpack.config.js",
+    "lib",
+    "src",
+    "types",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "yarn clean:lib && yarn build:lib && yarn build:theme",
+    "build:lib": "rollup --config ./scripts/rollup.config.js",
+    "build:theme": "webpack --config ./scripts/webapck.config.js && cp-cli scripts/dist/index.css lib/index.css && cp-cli scripts/dist/fonts lib/fonts && rimraf scripts/dist",
+    "clean:lib": "rimraf lib && rimraf scripts/dist"
   },
   "dependencies": {
+    "element-plus": "^1.0.2-beta.40",
+    "vue": "^3.0.11"
+  },
+  "peerDependencies": {
+    "element-plus": "^1.0.2-beta.40",
     "font-awesome": "^4.7.0",
-    "svg-sprite-loader": "^5.0.0"
+    "svg-sprite-loader": "^5.0.0",
+    "vue": "^3.0.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "autoprefixer": "^10.0.1",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-replace": "^2.3.4",
+    "@vue/compiler-sfc": "^3.0.7",
+    "autoprefixer": "^10.2.5",
     "babel-plugin-component": "^1.1.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.2.1",
-    "css-loader": "^5.0.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "cp-cli": "^2.0.0",
+    "css-loader": "^4.3.0",
     "cssnano": "^4.1.10",
-    "element-ui": "^2.13.2",
-    "file-loader": "^6.1.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.1.4",
-    "postcss-import": "^13.0.0",
-    "postcss-loader": "^4.0.4",
-    "vue": "^2.6.12",
-    "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.12",
+    "postcss-loader": "^5.2.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.34.2",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^6.0.0",
+    "sass": "^1.32.11",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "tslib": "^2.2.0",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^4.6.0"
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not ie <= 8"
   ]
 }
