--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.4",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -41,13 +41,15 @@
   },
   "dependencies": {
     "element-plus": "^1.0.2-beta.40",
-    "vue": "^3.0.11"
+    "font-awesome": "^4.7.0",
+    "svg-sprite-loader": "^5.0.0",
+    "vue": "^3.0.7"
   },
   "peerDependencies": {
     "element-plus": "^1.0.2-beta.40",
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^5.0.0",
-    "vue": "^3.0.11"
+    "vue": "^3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
