--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "2.0.0-alpha.4",
+  "version": "2.0.0-alpha.6",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -83,6 +83,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.45.2",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.32.11",
