调整目录以及添加新字体的功能，修复因body的边距为0时出现的横向滚动条问题

--- a/package.json
+++ b/package.json
@@ -26,39 +26,54 @@
     "dist/**",
     "src/**",
     "types/**",
-    "webpack.config.js",
+    "scripts/webpack.config.js",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build:font-css": "yarn all && cp-cli scripts/fontawesome lib/fontawesome && cp-cli scripts/ele lib/ele && yarn clean:font-css",
+    "clean:font-css": "rimraf scripts/fontawesome && rimraf scripts/ele",
+    "all": "yarn fontawesome-5.x.x && yarn fontawesome-5.x.x-pro && yarn fontawesome-4.7.0 && yarn ele-ui",
+    "fontawesome-5.x.x": "node scripts/fontawesome-5.x.x.js",
+    "fontawesome-5.x.x-pro": "node scripts/fontawesome-5.x.x-pro.js",
+    "fontawesome-4.7.0": "node scripts/font-awesome.v4.7.0.js",
+    "ele-ui": "node scripts/element-ui.js",
+    "build": "yarn clean:all && yarn build:lib && yarn build:font-css",
+    "build:lib": "webpack --config scripts/webpack.config.js",
+    "clean:lib": "rimraf lib",
+    "clean:all": "yarn clean:lib && yarn clean:font-css"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "autoprefixer": "^10.0.1",
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.1.0",
     "babel-plugin-component": "^1.1.1",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^6.2.1",
-    "css-loader": "^5.0.0",
-    "cssnano": "^4.1.10",
+    "cp-cli": "^2.0.0",
+    "css-loader": "^5.2.4",
     "element-ui": "^2.15.1",
-    "file-loader": "^6.1.1",
-    "mini-css-extract-plugin": "^1.2.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss": "^8.1.4",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.5.0",
+    "css-minimizer-webpack-plugin": "^2.0.0",
+    "cssnano": "^5.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "postcss": "^8.2.12",
+    "postcss-loader": "^5.2.0",
     "postcss-import": "^13.0.0",
-    "postcss-loader": "^4.0.4",
+    "rimraf": "^3.0.2",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^4.6.0"
+    "webpack": "^5.35.0",
+    "webpack-cli": "^4.6.0",
+    "vuepress": "^1.8.2",
+    "vuepress-plugin-demo-container": "^0.2.0"
   },
   "browserslist": [
     "> 1%",
