--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "1.0.19",
+  "version": "1.1.0-alpha.0",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -11,7 +11,11 @@
     "icon picker",
     "icon"
   ],
-  "main": "./dist/index.js",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "unpkg": "lib/index.js",
+  "jsdelivr": "lib/index.js",
+  "style": "lib/index.css",
   "repository": {
     "type": "git",
     "url": "https://gitee.com/cnovel/e-icon-picker"
@@ -23,7 +27,7 @@
   },
   "homepage": "https://doc.icon.cnovel.club",
   "files": [
-    "dist/**",
+    "lib/**",
     "src/**",
     "types/**",
     "scripts/webpack.config.js",
@@ -31,7 +35,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "build:font-css": "yarn all && cp-cli scripts/fontawesome lib/fontawesome && cp-cli scripts/ele lib/ele && yarn clean:font-css",
+    "build:font-css": "yarn all && cp-cli scripts/fontawesome lib/fontawesome && cp-cli scripts/ele lib/ele",
     "clean:font-css": "rimraf scripts/fontawesome && rimraf scripts/ele",
     "all": "yarn fontawesome-5.x.x && yarn fontawesome-5.x.x-pro && yarn fontawesome-4.7.0 && yarn ele-ui",
     "fontawesome-5.x.x": "node scripts/fontawesome-5.x.x.js",
@@ -39,9 +43,11 @@
     "fontawesome-4.7.0": "node scripts/font-awesome.v4.7.0.js",
     "ele-ui": "node scripts/element-ui.js",
     "build": "yarn clean:all && yarn build:lib && yarn build:font-css",
-    "build:lib": "webpack --config scripts/webpack.config.js",
-    "clean:lib": "rimraf lib",
-    "clean:all": "yarn clean:lib && yarn clean:font-css"
+    "build:lib": "webpack --config scripts/webpack.config.js && cp-cli scripts/lib lib",
+    "clean:lib": "rimraf scripts/lib",
+    "clean:all": "rimraf lib && yarn clean:lib && yarn clean:font-css",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
@@ -58,22 +64,23 @@
     "cp-cli": "^2.0.0",
     "css-loader": "^5.2.4",
     "element-ui": "^2.15.1",
-    "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^1.5.0",
-    "css-minimizer-webpack-plugin": "^2.0.0",
-    "cssnano": "^5.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.2.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.2.12",
-    "postcss-loader": "^5.2.0",
     "postcss-import": "^13.0.0",
+    "postcss-loader": "^4.0.4",
     "rimraf": "^3.0.2",
+    "tslib": "^2.2.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.35.0",
-    "webpack-cli": "^4.6.0",
     "vuepress": "^1.8.2",
-    "vuepress-plugin-demo-container": "^0.2.0"
+    "vuepress-plugin-demo-container": "^0.2.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^4.6.0"
   },
   "browserslist": [
     "> 1%",
