--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
-    "ant-design-vue": "^1.7.4",
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
+    "@vuepress-reco/vuepress-plugin-extract-code": "^1.0.4",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.1.0",
     "babel-plugin-component": "^1.1.1",
