--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "e-icon-picker": "^1.0.19"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.8",
