--- a/package.json
+++ b/package.json
@@ -46,12 +46,19 @@
     "build:lib": "webpack --config scripts/webpack.config.js && cp-cli scripts/lib lib",
     "clean:lib": "rimraf scripts/lib",
     "clean:all": "rimraf lib && yarn clean:lib && yarn clean:font-css",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "rimraf dist && vuepress build docs && cp-cli docs/.vuepress/dist dist"
+    "publish": "npm publish --tag latest"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "svg-sprite-loader": "^5.0.0"
+    "svg-sprite-loader": "^5.0.0",
+    "element-ui": "^2.15.1",
+    "vue": "^2.6.12"
+  },
+  "peerDependencies": {
+    "font-awesome": "^4.7.0",
+    "svg-sprite-loader": "^5.0.0",
+    "element-ui": "^2.15.1",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
@@ -64,7 +71,6 @@
     "copy-webpack-plugin": "^6.2.1",
     "cp-cli": "^2.0.0",
     "css-loader": "^5.2.4",
-    "element-ui": "^2.15.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.2.0",
@@ -75,11 +81,8 @@
     "rimraf": "^3.0.2",
     "tslib": "^2.2.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "vue": "^2.6.12",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
-    "vuepress": "^1.8.2",
-    "vuepress-plugin-demo-container": "^0.2.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^4.6.0"
   },
