--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "e-icon-picker": "^1.1.0-alpha.1",
+    "e-icon-picker": "^1.1.0",
     "vue": "^2.6.12"
   },
   "devDependencies": {
