--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.11.0",
-    "e-icon-picker": "^2.0.0-beta.6",
+    "e-icon-picker": "^2.0.0",
     "vue": "^3.0.11"
   },
   "devDependencies": {
