--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.15.2",
-    "e-icon-picker": "1.1.2-alpha.4",
+    "e-icon-picker": "1.1.2",
     "vue": "^2.6.14"
   },
   "devDependencies": {
