--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "2.0.3-beta.2",
+  "version": "2.0.3",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -45,13 +45,13 @@
     "build:lib": "rollup --config ./scripts/rollup.config.js",
     "build:theme": "webpack --config ./scripts/webapck.config.js && cp-cli scripts/dist/index.css lib/index.css && cp-cli scripts/dist/fonts lib/fonts && rimraf scripts/dist",
     "clean:lib": "rimraf lib && rimraf scripts/dist && yarn clean:font-css",
-    "publish": "npm publish --tag beta"
+    "publish": "npm publish --tag next"
   },
   "dependencies": {
-    "element-plus": "^1.0.2-beta.42",
+    "element-plus": "^1.0.2-beta.54",
     "font-awesome": "^4.7.0",
-    "svg-sprite-loader": "^6.0.5",
-    "vue": "^3.0.11"
+    "svg-sprite-loader": "^6.0.9",
+    "vue": "^3.1.4"
   },
   "peerDependencies": {
     "element-plus": "^1.0.2-beta.42",
@@ -60,38 +60,38 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/preset-env": "^7.13.15",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
     "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
-    "@vue/compiler-sfc": "^3.0.11",
-    "autoprefixer": "^10.2.5",
+    "@vue/compiler-sfc": "^3.1.4",
+    "autoprefixer": "^10.2.6",
     "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "cp-cli": "^2.0.0",
-    "css-loader": "^5.2.4",
-    "css-minimizer-webpack-plugin": "^2.0.0",
-    "cssnano": "^5.0.1",
+    "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "cssnano": "^5.0.6",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^1.5.0",
-    "postcss": "^8.2.12",
-    "postcss-loader": "^5.2.0",
+    "mini-css-extract-plugin": "^2.0.0",
+    "postcss": "^8.3.5",
+    "postcss-loader": "^6.1.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.45.2",
+    "rollup": "^2.52.7",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
-    "sass": "^1.32.11",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "tslib": "^2.2.0",
-    "webpack": "^5.35.0",
-    "webpack-cli": "^4.6.0"
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.0.0",
+    "tslib": "^2.3.0",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2"
   },
   "browserslist": [
     "> 1%",
