--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "2.0.3",
+  "version": "2.0.4-beta.2",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -48,10 +48,10 @@
     "publish": "npm publish --tag next"
   },
   "dependencies": {
-    "element-plus": "^1.0.2-beta.54",
+    "element-plus": "^1.0.2-beta.42",
     "font-awesome": "^4.7.0",
-    "svg-sprite-loader": "^6.0.9",
-    "vue": "^3.1.4"
+    "svg-sprite-loader": "^6.0.5",
+    "vue": "^3.0.0"
   },
   "peerDependencies": {
     "element-plus": "^1.0.2-beta.42",
