--- a/example/package.json
+++ b/example/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "core-js": "^3.15.2",
-    "e-icon-picker": "1.1.2",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "e-icon-picker": "1.1.3-alpha.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.30.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.12.1",
-    "svgo-loader":"^2.2.1",
+    "svgo-loader": "^2.2.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
