--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "2.0.4-beta.2",
+  "version": "2.0.4",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -48,6 +48,7 @@
     "publish": "npm publish --tag next"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "element-plus": "^1.0.2-beta.42",
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^6.0.5",
@@ -78,6 +79,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.0.0",
+    "mitt": "^3.0.0",
+    "normalize-wheel": "^1.0.1",
     "postcss": "^8.3.5",
     "postcss-loader": "^6.1.1",
     "rimraf": "^3.0.2",
