--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.15.2",
-    "e-icon-picker": "2.0.4-beta.7",
+    "e-icon-picker": "2.0.4",
     "vue": "^3.1.4"
   },
   "devDependencies": {
