--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -51,16 +51,18 @@
     "publish": "npm publish --tag latest"
   },
   "dependencies": {
+    "async-validator": "1.11.5",
+    "core-js": "^3.15.2",
+    "element-ui": "^2.15.3",
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^5.0.0",
-    "vue": "^2.6.14",
-    "element-ui": "^2.15.3"
+    "vue": "^2.6.14"
   },
   "peerDependencies": {
+    "element-ui": "^2.15.1",
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^5.0.0",
-    "vue": "^2.6.12",
-    "element-ui": "^2.15.1"
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
