--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "bugs": {
     "url": "https://gitee.com/cnovel/e-icon-picker/issues"
   },
-  "homepage": "https://doc.icon.cnovel.club",
+  "homepage": "https://e-icon-picker.cnovel.club",
   "files": [
     "lib",
     "src",
