--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "1.1.3",
+  "version": "1.1.4-alpha.5",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -49,16 +49,16 @@
     "publish": "npm publish --tag latest"
   },
   "dependencies": {
+    "element-ui": "^2.15.3",
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^5.0.0",
-    "vue": "^2.6.14",
-    "element-ui": "^2.15.3"
+    "vue": "^2.6.12"
   },
   "peerDependencies": {
+    "element-ui": "^2.15.1",
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^5.0.0",
-    "vue": "^2.6.12",
-    "element-ui": "^2.15.1"
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -67,7 +67,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "copy-webpack-plugin":  "^6.2.1",
+    "copy-webpack-plugin": "^6.2.1",
     "cp-cli": "^2.0.0",
     "css-loader": "^5.2.6",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -75,6 +75,7 @@
     "mini-css-extract-plugin": "^1.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.3.5",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "postcss-import": "^13.0.0",
     "postcss-loader": "^4.0.4",
     "rimraf": "^3.0.2",
