--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "2.0.5-beta.1",
+  "version": "2.0.5",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
