--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "core-js": "^3.15.2",
     "vue": "^2.6.14",
-    "e-icon-picker": "1.1.4-alpha.4"
+    "e-icon-picker": "1.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.13",
