--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e-icon-picker",
-  "version": "2.0.6",
-  "description": "element-ui和font-awesome图标选择器",
+  "version": "2.0.7",
+  "description": "element-plus和font-awesome图标选择器",
   "keywords": [
     "vue",
     "icon-picker",
@@ -13,8 +13,8 @@
   ],
   "main": "lib/index.cjs.js",
   "module": "lib/index.esm-bundler.js",
-  "unpkg": "lib/index.global.prod.js",
-  "jsdelivr": "lib/index.global.prod.js",
+  "unpkg": "lib/index.umd.prod.js",
+  "jsdelivr": "lib/index.umd.prod.js",
   "style": "lib/index.css",
   "repository": {
     "type": "git",
@@ -43,59 +43,61 @@
     "ele-plus": "node scripts/element-plus.js",
     "build": "yarn clean:lib && yarn build:lib && yarn build:theme && yarn build:font-css",
     "build:lib": "rollup --config ./scripts/rollup.config.js",
-    "build:theme": "webpack --config ./scripts/webapck.config.js && cp-cli scripts/dist/index.css lib/index.css && cp-cli scripts/dist/fonts lib/fonts && rimraf scripts/dist",
+    "build:theme": "webpack --config ./scripts/webapck.config.js && cp-cli scripts/dist/index.css lib/index.css && cp-cli scripts/dist/fonts lib/fonts && cp-cli src/ele lib/ele && rimraf scripts/dist",
     "clean:lib": "rimraf lib && rimraf scripts/dist && yarn clean:font-css",
     "publish": "npm publish --tag next"
   },
   "dependencies": {
-    "@popperjs/core": "^2.9.2",
-    "element-plus": "^1.0.2-beta.42",
+    "element-plus": "^1.2.0-beta.1",
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^6.0.5",
-    "vue": "^3.0.0"
+    "vue": "^3.2.21"
   },
   "peerDependencies": {
-    "element-plus": "^1.0.2-beta.42",
+    "element-plus": "^1.2.0-beta.1",
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^6.0.5",
-    "vue": "^3.0.0"
+    "vue": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
     "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-replace": "^2.4.2",
-    "@vue/compiler-sfc": "^3.1.4",
-    "autoprefixer": "^10.2.6",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.21",
+    "autoprefixer": "^10.4.0",
     "babel-plugin-component": "^1.1.1",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "rollup-plugin-filesize": "9.1.1",
+    "rollup-plugin-esbuild": "4.6.0",
     "cp-cli": "^2.0.0",
     "css-loader": "^5.2.6",
-    "css-minimizer-webpack-plugin": "^3.0.2",
-    "cssnano": "^5.0.6",
+    "css-minimizer-webpack-plugin": "^3.1.1",
+    "cssnano": "^5.0.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^2.0.0",
+    "mini-css-extract-plugin": "^2.4.4",
     "mitt": "^3.0.0",
     "normalize-wheel": "^1.0.1",
-    "postcss": "^8.3.5",
-    "postcss-loader": "^6.1.1",
-    "progress-bar-webpack-plugin": "^1.11.0",
+    "postcss": "^8.3.11",
+    "postcss-loader": "^6.2.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.52.7",
+    "rollup": "^2.59.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
-    "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.0.0",
-    "tslib": "^2.3.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
+    "tslib": "^2.3.1",
     "webpack": "^5.42.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "esbuild": "0.13.12"
   },
   "browserslist": [
     "> 1%",
