--- a/example/package.json
+++ b/example/package.json
@@ -10,9 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.15.2",
-    "e-icon-picker":"^1.1.6",
-    "vue": "^2.6.14",
-    "element-ui": "^2.15.6"
+    "element-ui": "^2.15.6",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.13",
