--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -37,8 +37,9 @@
   "scripts": {
     "build:font-css": "yarn all && cp-cli scripts/fontawesome lib/fontawesome && cp-cli scripts/ele lib/ele",
     "clean:font-css": "rimraf scripts/fontawesome && rimraf scripts/ele",
-    "all": "yarn fontawesome-5.x.x && yarn fontawesome-5.x.x-pro && yarn fontawesome-4.7.0 && yarn ele-ui",
+    "all": "yarn fontawesome-5.x.x && yarn fontawesome-6.x.x && yarn fontawesome-5.x.x-pro && yarn fontawesome-4.7.0 && yarn ele-ui",
     "fontawesome-5.x.x": "node scripts/fontawesome-5.x.x.js",
+    "fontawesome-6.x.x": "node scripts/fontawesome-6.x.x.js",
     "fontawesome-5.x.x-pro": "node scripts/fontawesome-5.x.x-pro.js",
     "fontawesome-4.7.0": "node scripts/font-awesome.v4.7.0.js",
     "ele-ui": "node scripts/element-ui.js",
