--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "dependencies": {
     "async-validator": "1.11.5",
-    "core-js": "^3.15.2",
+    "core-js": "^3.21.1",
     "element-ui": "^2.15.6",
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^5.0.0",
@@ -66,14 +66,14 @@
     "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
     "@vuepress-reco/vuepress-plugin-extract-code": "^1.0.4",
-    "autoprefixer": "^10.2.6",
-    "babel-loader": "^8.2.2",
+    "autoprefixer": "^10.4.2",
+    "babel-loader": "^8.2.3",
     "babel-plugin-component": "^1.1.1",
     "cache-loader": "^4.1.0",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^6.2.1",
     "cp-cli": "^2.0.0",
     "css-loader": "^5.2.6",
@@ -86,11 +86,11 @@
     "postcss-loader": "^4.0.4",
     "rimraf": "^3.0.2",
     "svgo-loader": "^2.2.1",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-loader": "^15.9.7",
     "vue-template-compiler": "^2.6.14",
-    "vuepress": "^1.8.2",
+    "vuepress": "^1.9.7",
     "vuepress-plugin-demo-container": "^0.2.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^4.6.0"
