--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.15.2",
+    "e-icon-picker": "1.1.7",
     "element-ui": "^2.15.6",
     "vue": "^2.6.14"
   },
