--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   ],
   "main": "lib/index.js",
   "module": "lib/index.js",
-  "unpkg": "lib/index.js",
-  "jsdelivr": "lib/index.js",
-  "style": "lib/index.css",
+  "unpkg": "lib/index.min.js",
+  "jsdelivr": "lib/index.min.js",
+  "style": "lib/index.min.css",
   "repository": {
     "type": "git",
     "url": "https://gitee.com/cnovel/e-icon-picker"
@@ -50,7 +50,7 @@
     "publish": "npm publish --tag latest"
   },
   "dependencies": {
-    "element-ui": "^2.15.6",
+    "element-ui": "^2.15.8",
     "font-awesome": "^4.7.0",
     "svg-sprite-loader": "^5.0.0",
     "vue": "^2.6.14"
@@ -76,11 +76,12 @@
     "mini-css-extract-plugin": "^1.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.3.5",
-    "progress-bar-webpack-plugin": "^1.11.0",
     "postcss-import": "^13.0.0",
     "postcss-loader": "^4.0.4",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "rimraf": "^3.0.2",
     "svgo-loader": "^2.2.1",
+    "terser-webpack-plugin": "^5.3.1",
     "tslib": "^2.3.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-loader": "^15.9.7",
