--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-icon-picker",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "element-ui和font-awesome图标选择器",
   "keywords": [
     "vue",
@@ -16,6 +16,7 @@
   "unpkg": "lib/index.min.js",
   "jsdelivr": "lib/index.min.js",
   "style": "lib/index.min.css",
+  "types": "types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://gitee.com/cnovel/e-icon-picker"
