--- a/packages/e-icon-picker/tsconfig.json
+++ b/packages/e-icon-picker/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es2018",
     "module": "esnext",
     "moduleResolution": "node",
     "strict": true,
@@ -22,10 +22,11 @@
     ]
   },
   "include": [
-    "components/**/*.ts",
-    "components/**/*.d.ts",
-    "components/**/*.tsx",
-    "components/**/*.vue"
+    "components/**/*",
+    "docs/**/*"
+  ],
+  "exclude": [
+    "node_modules"
   ],
   "paths": {
     "@/*": [
