基本功能完成，还差svg图标使用

--- a/packages/e-icon-picker/tsconfig.json
+++ b/packages/e-icon-picker/tsconfig.json
@@ -26,7 +26,8 @@
     "docs/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "node_module/**"
   ],
   "paths": {
     "@/*": [
