--- a/packages/e-icon-picker/package.json
+++ b/packages/e-icon-picker/package.json
@@ -22,7 +22,7 @@
     "url": "https://gitee.com/cnovel/e-icon-picker/issues"
   },
   "main": "index.umd.js",
-  "module": "index.es.js",
+  "module": "index.mjs",
   "unpkg": "index.umd.js",
   "jsdelivr": "index.umd.js",
   "style": "index.css",
@@ -39,52 +39,56 @@
     "clean:lib": "rimraf lib"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.5",
-    "@vue/shared": "^3.2.37",
-    "@vueuse/core": "^8.7.5",
+    "@popperjs/core": "^2.11.6",
+    "@vue/shared": "^3.2.45",
+    "@vueuse/core": "^9.5.0",
     "debounce": "^1.2.1",
     "svg-sprite-loader": "^6.0.11",
-    "vue": "^3.2.37"
+    "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@babel/parser": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
+    "@babel/parser": "^7.20.3",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@babel/traverse": "^7.18.6",
-    "@docsearch/css": "^3.0.0-alpha.50",
-    "@docsearch/js": "^3.0.0-alpha.50",
-    "@rollup/pluginutils": "^4.2.1",
+    "@babel/traverse": "^7.20.1",
+    "@docsearch/css": "^3.3.0",
+    "@docsearch/js": "^3.3.0",
+    "@element-plus/icons-vue": "^2.0.10",
+    "@rollup/pluginutils": "^5.0.2",
     "@types/commander": "^2.12.2",
     "@types/debounce": "^1.2.1",
     "@types/fs-extra": "^9.0.13",
-    "@types/lodash": "^4.14.182",
+    "@types/lodash": "^4.14.189",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "^18.0.3",
-    "@types/prompts": "^2.0.14",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/compiler-sfc": "^3.2.37",
-    "commander": "^9.3.0",
-    "esbuild-register": "^2.6.0",
+    "@types/node": "^18.11.9",
+    "@types/prompts": "^2.4.1",
+    "@types/chalk": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/compiler-sfc": "^3.2.45",
+    "commander": "^9.4.1",
+    "element-plus": "^2.2.22",
+    "esbuild-register": "^3.4.1",
     "fs-extra": "^10.1.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "lodash-unified": "^1.0.2",
+    "lodash-unified": "^1.0.3",
     "prompts": "^2.4.2",
-    "sass": "^1.53.0",
+    "rimraf": "^3.0.2",
+    "sass": "^1.56.1",
     "shelljs": "^0.8.5",
-    "ts-morph": "^15.1.0",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.14",
-    "vite-plugin-banner": "^0.3.0",
-    "vite-plugin-dts": "^1.2.1",
-    "vite-plugin-md": "^0.18.1",
-    "vitepress": "^1.0.0-alpha.5",
-    "vitepress-theme-demoblock": "1.4.2",
-    "vue": "^3.2.37",
-    "vue-tsc": "^0.38.4",
-    "rimraf": "^3.0.2"
+    "ts-morph": "^17.0.1",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4",
+    "vite-plugin-banner": "^0.6.1",
+    "vite-plugin-dts": "^1.7.1",
+    "vite-plugin-md": "^0.20.4",
+    "vitepress": "1.0.0-alpha.29",
+    "vitepress-theme-demoblock": "2.0.0",
+    "vue": "^3.2.45",
+    "vue-tsc": "^1.0.9",
+    "chalk": "^4.1.2"
   },
   "browserslist": [
     "> 1%",
