--- a/packages/e-icon-picker/tsconfig.json
+++ b/packages/e-icon-picker/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
     "target": "es2018",
     "module": "esnext",
     "moduleResolution": "node",
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "lib": [
       "esnext",
       "dom"
@@ -14,7 +18,6 @@
       "vite/client",
       "node"
     ],
-    "esModuleInterop": true,
     "plugins": [
       {
         "name": "@vuedx/typescript-plugin-vue"
