1. 修复图标对齐问题。 2. 优化暂无图标文字样式。 3. 优化默认追加到body为不追加。 4. 修复搜索过滤图标列表问题。 5. 修复输入框左侧图标大小导致高度和输入框高度不一致问题。 6. 修复文档 复制成功 不显示问题。 7. 修复文档 当编译完后无法正常显示组件问题。

--- a/package.json
+++ b/package.json
@@ -24,16 +24,27 @@
     "url": "https://gitee.com/cnovel/e-icon-picker/issues"
   },
   "workspaces": [
-    "packages/*",
     "docs",
-    "./**"
+    "lib"
   ],
   "main": "index.umd.js",
   "module": "index.mjs",
   "unpkg": "index.umd.js",
   "jsdelivr": "index.umd.js",
-  "style": "index.css",
   "types": "index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "require": "./index.js",
+      "import": "./index.mjs"
+    },
+    "./*": "./*"
+  },
+  "style": "index.css",
+  "sideEffects": [
+    "theme/*",
+    "components/*/*"
+  ],
   "scripts": {
     "build:lib": "pnpm clean:lib && pnpm build:components && pnpm build:icon && pnpm release",
     "build:components": "tsx scripts/build.ts",
