1. 添加layui-vue图标。 2. 添加feather-icons图标使用，即外部svg图标。 3. 完善docs。

--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -10,9 +10,11 @@
     "strict": true,
     "noImplicitAny": false,
     "skipLibCheck": true,
-    "lib": ["WebWorker"],
+    "lib": ["WebWorker","DOM"],
     "paths": {
       "e-icon-picker": ["../lib"],
+      "@docs/*": ["./*"],
+      "@public/*": ["./public/*"],
       "~/*": ["./.vitepress/vitepress/*"]
     }
   },
