--- a/package.json
+++ b/package.json
@@ -73,13 +73,14 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@layui/icons-vue": "^1.0.9",
     "@ant-design/icons-vue": "^6.1.0",
+    "@arco-design/web-vue": "^2.41.0",
     "@babel/parser": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/traverse": "^7.20.10",
     "@element-plus/icons-vue": "^2.0.10",
-    "@arco-design/web-vue": "^2.40.1",
     "@rollup/pluginutils": "^5.0.2",
     "@types/chalk": "^2.2.0",
     "@types/commander": "^2.12.2",
@@ -87,15 +88,15 @@
     "@types/fs-extra": "^9.0.13",
     "@types/lodash": "^4.14.191",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "^18.11.17",
+    "@types/node": "^18.11.18",
     "@types/shelljs": "^0.8.11",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/compiler-sfc": "^3.2.45",
     "chalk": "^5.2.0",
     "commander": "^9.4.1",
-    "eslint": "^8.30.0",
+    "eslint": "^8.31.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.8.0",
     "fs-extra": "^11.1.0",
@@ -106,7 +107,7 @@
     "rimraf": "^3.0.2",
     "sass": "^1.57.1",
     "shelljs": "^0.8.5",
-    "stylelint": "^14.16.0",
+    "stylelint": "^14.16.1",
     "stylelint-config-recommended-scss": "^8.0.0",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-scss": "^4.3.0",
@@ -115,8 +116,7 @@
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
     "vite-plugin-dts": "^1.7.1",
-    "vue": "^3.2.45",
-    "vue-tsc": "^1.0.17"
+    "vue-tsc": "^1.0.19"
   },
   "lint-staged": {
     "packages/**/{*.vue,*.ts}": "eslint --fix",
