--- a/docs/package.json
+++ b/docs/package.json
@@ -8,19 +8,22 @@
     "preview": "vitepress preview ."
   },
   "dependencies": {
-    "vue": "^3.2.45",
-    "e-icon-picker": "workspace:*"
+    "@ant-design/icons-vue": "^6.1.0",
+    "@arco-design/web-vue": "^2.41.0",
+    "@element-plus/icons-vue": "^2.0.10",
+    "@layui/icons-vue": "^1.0.9",
+    "e-icon-picker": "workspace:*",
+    "element-plus": "^2.2.28",
+    "feather-icons": "^4.29.0",
+    "tdesign-icons-vue-next": "^0.1.7",
+    "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
+    "esbuild-register": "^3.4.2",
     "vite-plugin-md": "^0.21.5",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vitepress": "1.0.0-alpha.33",
-    "vitepress-theme-demoblock": "2.0.2",
-    "element-plus": "^2.2.27",
-    "esbuild-register": "^3.4.2",
-    "@element-plus/icons-vue": "^2.0.10",
-    "@ant-design/icons-vue": "^6.1.0",
-    "tdesign-icons-vue-next": "^0.1.7",
-    "@arco-design/web-vue": "^2.40.1"
+    "vitepress": "1.0.0-alpha.34",
+    "vitepress-theme-demoblock": "2.0.2"
   }
 }
