--- a/package.json
+++ b/package.json
@@ -66,57 +66,57 @@
     "vue": "^3.2.0"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "@vue/shared": "^3.2.45",
-    "@vueuse/core": "^9.12.0",
-    "debounce": "^1.2.1",
-    "vue": "^3.2.45"
+    "@popperjs/core": "^2.11.8",
+    "@vue/shared": "^3.4.15",
+    "@vueuse/core": "^10.7.2",
+    "debounce": "^2.0.0",
+    "vue": "^3.4.15",
+    "e-icon-picker": "workspace:./lib"
   },
   "devDependencies": {
-    "@layui/icons-vue": "^1.0.9",
-    "@ant-design/icons-vue": "^6.1.0",
-    "@arco-design/web-vue": "^2.42.0",
-    "@babel/parser": "^7.20.13",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
-    "@babel/traverse": "^7.20.13",
-    "@element-plus/icons-vue": "^2.0.10",
-    "@rollup/pluginutils": "^5.0.2",
+    "@layui/icons-vue": "^1.1.0",
+    "@ant-design/icons-vue": "^7.0.1",
+    "@arco-design/web-vue": "^2.54.3",
+    "@babel/parser": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
+    "@babel/traverse": "^7.23.9",
+    "@element-plus/icons-vue": "^2.3.1",
+    "@rollup/pluginutils": "^5.1.0",
     "@types/chalk": "^2.2.0",
     "@types/commander": "^2.12.2",
-    "@types/debounce": "^1.2.1",
-    "@types/fs-extra": "^11.0.1",
-    "@types/lodash": "^4.14.191",
-    "@types/lodash-es": "^4.17.6",
-    "@types/node": "^18.11.18",
-    "@types/shelljs": "^0.8.11",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "chalk": "^5.2.0",
-    "commander": "^10.0.0",
-    "eslint": "^8.33.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-vue": "^9.9.0",
-    "fs-extra": "^11.1.0",
-    "lint-staged": "^13.1.0",
+    "@types/debounce": "^1.2.4",
+    "@types/fs-extra": "^11.0.4",
+    "@types/lodash": "^4.14.202",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.11.7",
+    "@types/shelljs": "^0.8.15",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "chalk": "^5.3.0",
+    "commander": "^11.1.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-vue": "^9.20.1",
+    "fs-extra": "^11.2.0",
+    "lint-staged": "^15.2.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lodash-unified": "^1.0.3",
-    "rimraf": "^4.1.2",
-    "sass": "^1.57.1",
+    "rimraf": "^5.0.5",
+    "sass": "^1.70.0",
     "shelljs": "^0.8.5",
-    "stylelint": "^14.16.1",
-    "stylelint-config-recommended-scss": "^8.0.0",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-scss": "^4.3.0",
-    "tdesign-icons-vue-next": "^0.1.7",
-    "tsx": "^3.12.2",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4",
-    "vite-plugin-dts": "^1.7.1",
-    "vue-tsc": "^1.0.24",
-    "e-icon-picker": "workspace:./lib"
+    "stylelint": "^16.2.0",
+    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-scss": "^6.1.0",
+    "tdesign-icons-vue-next": "^0.2.2",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vite-plugin-dts": "^3.7.2",
+    "vue-tsc": "^1.8.27"
   },
   "lint-staged": {
     "packages/**/{*.vue,*.ts}": "eslint --fix",
