--- a/docs/package.json
+++ b/docs/package.json
@@ -18,14 +18,18 @@
     "tdesign-icons-vue-next": "^0.2.2",
     "vue": "^3.4.15",
     "vitepress-theme-demoblock": "3.0.3",
-    "e-icon-picker": "workspace:./lib"
+    "e-icon-picker": "workspace:./lib",
+    "@iconify/iconify": "^3.1.1",
+    "@iconify/json": "^2.2.177",
+    "@purge-icons/generated": "^0.10.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.7",
-    "esbuild-register": "^3.5.0",
     "vite-plugin-md": "^0.21.5",
     "vite-plugin-svg-icons": "^2.0.1",
     "vitepress": "1.0.0-rc.40",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "vite-plugin-purge-icons": "^0.10.0",
+    "unplugin-icons": "^0.18.3"
   }
 }
